src/objects/nposition__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>addd</description>
        <inlineHelpText>add</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Edu_Qual__c</fullName>
        <description>asd</description>
        <inlineHelpText>sdf</inlineHelpText>
        <label>Edu. Qual</label>
        <picklist>
            <picklistValues>
                <fullName>bca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>btech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>diplama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mca</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <label>Hire By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>afs</description>
        <inlineHelpText>asf</inlineHelpText>
        <label>Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Max_Sal__c</fullName>
        <description>add</description>
        <inlineHelpText>ad</inlineHelpText>
        <label>Max Sal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Sal__c</fullName>
        <description>adf</description>
        <inlineHelpText>asfd</inlineHelpText>
        <label>Min Sal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <description>ad</description>
        <inlineHelpText>asfd</inlineHelpText>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <description>addadd</description>
        <inlineHelpText>aaadssa</inlineHelpText>
        <label>Position Title</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <description>afs</description>
        <inlineHelpText>asf</inlineHelpText>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <description>asfd</description>
        <inlineHelpText>asff</inlineHelpText>
        <label>Skills Required</label>
        <picklist>
            <picklistValues>
                <fullName>java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sfdc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Travel_Req__c</fullName>
        <defaultValue>true</defaultValue>
        <description>asd</description>
        <inlineHelpText>add</inlineHelpText>
        <label>Travel Req</label>
        <type>Checkbox</type>
    </fields>
    <label>nposition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>p-{000}</displayFormat>
        <label>nposition id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>nposition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>